Fixed navbar, content aligns properly now.

--- a/Website/static/styles/basestyle.css
+++ b/Website/static/styles/basestyle.css
@@ -1,35 +1,28 @@
 body {
     font-family: Arial, Helvetica, sans-serif;
-    display: flex;
+    display: block;
     margin: 0 auto;
     height: 100vh;
     background-color: #d3f2eb;
 }
 
-nav {
-    width: 100%;
-    float: left;
-}
-
 .navbar {
-    margin: 0;
-    padding: 8px;
     background-color: #1b305c;
-    text-decoration: none;
-    color: white;
-}
-
-.navbar li {
-    display: inline-block;
+    overflow: hidden;
+    min-width: 100vw;
+    margin: 0 auto;
+    height: fit-content;
 }
 
 .navbar a {
-    display: block;
-    padding: 8px 25px;
+    float: left;
     text-decoration: none;
+    text-align: center;
     color: white;
+    padding: 14px 16px;
 }
 
 .navbar a:hover {
-    background-color: #3a5ba2;
+    background-color: #4f74c4;
+    color: black;
 }
